# langroid-examples

./: .gitignore  Makefile  README.md  pyproject.toml
.chainlit/: config.toml
.github/workflows/: publish.yml
cloud/: Dockerfile  README.md  langroid_agents.py  requirements.txt  server.py
cloud/static/css/: styles.css
cloud/static/js/: script.js
cloud/templates/: index.html
cog-server/: README.md  cog.yaml  server-simple.py
examples/basic/: autocorrect.py  chat-local.py  chat-search.py  chat.py  fn-call-local-numerical.py  fn-call-local-simple.py
examples/chainlit/: chat-search.py  chat-stream.py  chat-with-task.py  chat.py
examples/data-qa/: table_chat.py
examples/data-qa/sql-chat/: Healthcare-Diabetes.csv  diabetes.db  sql_chat.py
examples/docqa/: README.md  biden-ai.txt  chat-search-filter.py  chat-search.py  chat.py  chat_multi.py  chat_multi_extract.py  chat_search.py  employment.txt  extract-langchain.py  extract-langroid.py  filter-multi-doc-auto.py  filter-multi-doc-manual.py  giraffes.txt  oai-retrieval-2-summarizer.py  rag-local-simple.py  retrieve-context-langchain.py  retrieve-context-langroid.py
examples/docqa/streamlit-app/: README.md  app.py  utils.py
examples/extract/: chat.py
examples/labeling/banking/: banking_classification.py  banking_classification_example.ipynb  banking_classification_example.py  results.txt  seed.csv  test.csv  test_llm_responses.csv
examples/labeling/banking/autolabel/: .autolabel.v15.db
examples/labeling/twitter_emotion_detection/: seed.csv  test.csv  test_llm_responses.csv  tweet_emotion_detection_example.ipynb  twitter_emotion_detection.py
examples/quick-start/: chat-agent-docs.py  chat-agent-tool.py  chat-agent.py  multi-agent-chat.py  pdf-chat.py  three-agent-chat-num-router.py  three-agent-chat-num.py  three-agent-chat.py  try-llm.py  two-agent-chat-num.py  two-agent-chat.py
examples/quick-start/memory-chat-agent/: base_memory_chat_agent.py  memory_chat_agent.py  memory_doc_chat_agent.py
fastapi-server/: .dockerignore  Dockerfile  Makefile  README.md  app.py  pyproject.toml  requirements.txt
public/: stylesheet.css
