[project]
name = "langroid-examples"
version = "0.1.17"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=8.30.0",
    "langroid[all]>=0.27.4",
    "semver>=3.0.2",
]

[project.scripts]
chat = "examples.basic.chat:cli"
#completion = "examples.basic.completion"
chatdoc = "examples.docqa.chat:cli"



[tool.packaging]
warn = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["examples"]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "**/node_modules/**",
]

