[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Prasad Chalasani <pchalasani@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
langroid = "^0.1.200"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
